--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -75,21 +75,23 @@
   transform: scale(1.03);
 }
 
+.hero-title-text {
+  display: none;
+  font-family: 'Orbitron', sans-serif;
+  font-size: 3rem;
+  color: #ff3b3b;
+}
+
 /* ----------------------------
    HERO-OSIO MEDIAQUERIES
 ----------------------------- */
-@media (max-width: 630px) {
+@media (max-width: 530px) {
   .hero-title-image {
-    width: 100vw;
-    min-width: 250px;
-    transform: scale(1.1);
+    display: none;
   }
-}
-@media (max-width: 420px) {
-  .hero-title-image {
-    width: 100vw;
-    min-width: 150px;
-    transform: scale(1.2);
+
+  .hero-title-text {
+    display: block;
   }
 }
 
