--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -137,7 +137,7 @@
 .blurred-background {
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
-  background-image: url('/assets/images/hero.jpg');
+  background-image: url('/assets/images/Hero/hero.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
