--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -33,13 +33,25 @@
   align-items: center;
 }
 
-.hero-title-image {
-  max-width: 100%;
-  height: auto;
-  display: block;
-  margin: 0 auto;
+.hero-title-text {
+  font-family: 'Orbitron', sans-serif;
+  font-size: 3rem;
+  font-weight: bold;
+  text-align: center;
+  background: linear-gradient(45deg, red, orange, yellow, orange, red);
+  background-size: 300%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: flame 5s linear infinite;
+  margin-bottom: 2rem;
 }
 
+/* Animaation keyframe (h1)*/
+@keyframes flame {
+  0%   { background-position: 0% 50%; }
+  50%  { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
 
 .hero-content h2 {
   font-family: 'Orbitron', sans-serif;
@@ -75,27 +87,15 @@
   transform: scale(1.03);
 }
 
-.hero-title-text {
-  display: none;
-  font-family: 'Orbitron', sans-serif;
-  font-size: 3rem;
-  color: #ff3b3b;
-}
-
 /* ----------------------------
    HERO-OSIO MEDIAQUERIES
 ----------------------------- */
-@media (max-width: 530px) {
-  .hero-title-image {
-    display: none;
-  }
-
-  .hero-title-text {
-    display: block;
-  }
-}
 
 @media (min-width: 1400px) {
+    .hero-title-text {
+    font-size: 4.5rem; 
+  }
+
   .hero-section {
     max-width: 1400px;
     margin-left: auto;
