--- a/src/pages/Gallery.css
+++ b/src/pages/Gallery.css
@@ -121,16 +121,6 @@
 }
 
 .popup-close {
-  cursor: pointer;
-  font-size: 1.5rem;
-  position: absolute;
-  top: 8px;
-  right: 12px;
-  background: none;
-  border: none;
-}
-
-.popup-close {
   position: absolute;
   top: 12px;
   right: 12px;
@@ -139,12 +129,12 @@
   font-size: 28px;
   font-weight: bold;
   cursor: pointer;
-  color: #444;
+  color: #ff3b3b;
   transition: color 0.2s ease;
 }
 
 .popup-close:hover {
-  color: #000000;
+  color: #a32c2c;
 }
 
 .popup-buttons {
@@ -166,5 +156,20 @@
 }
 
 .popup-button:hover {
-  background-color: #e63737;
+  background-color: #ff3b3b;
+}
+.fullscreen-close-button {
+  position: fixed;
+  top: 18px;
+  right: 18px;
+  background: transparent;
+  border: none;
+  font-size: 33px;
+  cursor: pointer;
+  color: #ff3b3b;
+  transition: color 0.2s ease;
+  z-index: 999999;
+}
+.fullscreen-close-button:hover {
+  color: #a32c2c;
 }
