--- a/src/pages/Gallery.css
+++ b/src/pages/Gallery.css
@@ -38,6 +38,13 @@
   font-family: 'Orbitron', sans-serif;
   margin-bottom: 1rem;
   font-size: 1rem;
+
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-align: center;
+  min-height: 2.5rem;
 }
 
 .thumbnail-caption {
